improving page styles

--- a/public/change_password.html
+++ b/public/change_password.html
@@ -1,51 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trocar Senha - Empresa TI</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-     <header>
-         <img src="placeholder_logo.png" alt="Logo da Empresa" id="logo-small">
-         <h1>Troca de Senha de Clientes</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trocar Senha - TechSolutions</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="container">
+        <img
+          src="placeholder_logo.png"
+          alt="Logo TechSolutions"
+          id="logo-small"
+        />
+        <h1>Troca de Senha</h1>
+      </div>
     </header>
-     <main>
-        <form id="change-password-form">
-             <div class="form-group">
-                <label for="email">Login (E-mail):</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-             <div class="form-group">
-                <label for="new-password">Nova Senha:</label>
-                <input type="password" id="new-password" name="new-password" required>
-            </div>
-             <div class="form-group">
-                <label for="confirm-password">Confirmar Nova Senha:</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
-            </div>
-            <div class="form-group password-instructions">
-                <p><strong>Regras da Senha:</strong></p>
-                <ul>
-                    <li>Pelo menos 6 caracteres.</li>
-                    <li>Pelo menos 1 número (0-9).</li>
-                    <li>Pelo menos 1 letra maiúscula (A-Z).</li>
-                    <li>Pelo menos 1 caractere especial permitido: @ # $ % & ! ? / + = .</li>
-                    <li>Caracteres NÃO permitidos: { } [ ] &lt; &gt; ;</li>
-                 </ul>
-            </div>
-             <div id="error-message" class="error"></div>
-            <div class="form-actions">
-                <button type="submit">Trocar Senha</button>
-                <button type="button" id="clear-button">Limpar</button>
-            </div>
-        </form>
+    <main class="container">
+      <form id="change-password-form">
+        <h2>Alterar Senha</h2>
+        <div class="form-group">
+          <label for="email">E-mail:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            placeholder="Digite seu e-mail"
+          />
+        </div>
+        <div class="form-group">
+          <label for="new-password">Nova Senha:</label>
+          <input
+            type="password"
+            id="new-password"
+            name="new-password"
+            required
+            placeholder="Digite a nova senha"
+          />
+        </div>
+        <div class="form-group">
+          <label for="confirm-password">Confirmar Nova Senha:</label>
+          <input
+            type="password"
+            id="confirm-password"
+            name="confirm-password"
+            required
+            placeholder="Confirme a nova senha"
+          />
+        </div>
+        <div class="form-group password-instructions">
+          <h3>Requisitos da Senha:</h3>
+          <ul>
+            <li>Pelo menos 6 caracteres</li>
+            <li>Pelo menos 1 número (0-9)</li>
+            <li>Pelo menos 1 letra maiúscula (A-Z)</li>
+            <li>
+              Pelo menos 1 caractere especial permitido: @ # $ % & ! ? / + = .
+            </li>
+            <li>Caracteres NÃO permitidos: { } [ ] &lt; &gt; ;</li>
+          </ul>
+        </div>
+        <div id="error-message" class="error"></div>
+        <div class="form-actions">
+          <button type="submit">Alterar Senha</button>
+          <button type="button" id="clear-button">Limpar</button>
+        </div>
+      </form>
     </main>
     <footer class="main-footer">
-         <p>&copy; 2025 Empresa TI. Todos os direitos reservados.</p>
-     </footer>
+      <div class="container">
+        <p>&copy; 2024 TechSolutions. Todos os direitos reservados.</p>
+      </div>
+    </footer>
     <script src="js/common.js"></script>
     <script src="js/change_password.js"></script>
-</body>
+  </body>
 </html>
