--- a/public/index.html
+++ b/public/index.html
@@ -1,98 +1,186 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empresa TI - Home</title>
-    <link rel="stylesheet" href="css/style.css">
-    </head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TechSolutions - Soluções em TI</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <header class="main-header">
-        <img src="placeholder_logo.png" alt="Logo da Empresa" id="logo">
-        <h1>Soluções Inovadoras em TI</h1>
+      <div class="container">
+        <img src="placeholder_logo.png" alt="Logo TechSolutions" id="logo" />
+        <h1>Transformando Negócios com Tecnologia</h1>
         <nav>
-            <a href="login.html">Login Cliente</a>
-            <a href="register.html">Cadastrar Cliente</a>
-            <a href="service_request.html" id="service-link" style="display: none;">Solicitar Serviço</a>
+          <a href="login.html">Login Cliente</a>
+          <a href="register.html">Cadastrar Cliente</a>
+          <a href="service_request.html" id="service-link" style="display: none"
+            >Solicitar Serviço</a
+          >
         </nav>
+      </div>
     </header>
 
-    <main>
-        <section id="history">
-            <h2>Nossa História</h2>
-            <p>Texto sobre a breve história da empresa...</p>
-            <div class="video-container">
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                 </div>
-        </section>
+    <main class="container">
+      <section id="history">
+        <h2>Nossa História</h2>
+        <p>
+          Fundada em 2010, a TechSolutions nasceu da visão de três profissionais
+          apaixonados por tecnologia e inovação. Começamos como uma pequena
+          startup focada em consultoria de TI e, ao longo dos anos, expandimos
+          nossos serviços para atender às crescentes demandas do mercado
+          digital.
+        </p>
+        <p>
+          Hoje, somos referência em soluções tecnológicas, atendendo mais de 500
+          clientes em todo o Brasil, desde pequenas empresas até grandes
+          corporações. Nossa missão é transformar negócios através da
+          tecnologia, oferecendo soluções personalizadas e inovadoras.
+        </p>
+        <div class="video-container">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
 
-        <section id="gallery">
-            <h2>Instalações e Equipe</h2>
-            <div class="photo-gallery">
-                <figure><img src="placeholder_foto1.jpg" alt="Foto 1"><figcaption>Descrição 1</figcaption></figure>
-                <figure><img src="placeholder_foto2.jpg" alt="Foto 2"><figcaption>Descrição 2</figcaption></figure>
-                <figure><img src="placeholder_foto3.jpg" alt="Foto 3"><figcaption>Descrição 3</figcaption></figure>
-                <figure><img src="placeholder_foto4.jpg" alt="Foto 4"><figcaption>Descrição 4</figcaption></figure>
-            </div>
-        </section>
+      <section id="gallery">
+        <h2>Nossa Estrutura e Equipe</h2>
+        <div class="photo-gallery">
+          <figure>
+            <img src="placeholder_foto1.jpg" alt="Nossa Sede" />
+            <figcaption>Sede Principal - Recife/PE</figcaption>
+          </figure>
+          <figure>
+            <img src="placeholder_foto2.jpg" alt="Sala de Reuniões" />
+            <figcaption>Sala de Reuniões Moderna</figcaption>
+          </figure>
+          <figure>
+            <img src="placeholder_foto3.jpg" alt="Data Center" />
+            <figcaption>Data Center Seguro</figcaption>
+          </figure>
+          <figure>
+            <img src="placeholder_foto4.jpg" alt="Equipe" />
+            <figcaption>Nossa Equipe de Especialistas</figcaption>
+          </figure>
+        </div>
+      </section>
 
-        <section id="services-presentation">
-            <h2>Nossos Serviços</h2>
-            <p>Apresentação estática dos principais serviços...</p>
-            </section>
+      <section id="services-presentation">
+        <h2>Nossos Serviços</h2>
+        <div class="services-grid">
+          <div class="service-card">
+            <h3>Consultoria em TI</h3>
+            <p>
+              Análise e implementação de soluções tecnológicas personalizadas
+              para seu negócio.
+            </p>
+          </div>
+          <div class="service-card">
+            <h3>Desenvolvimento de Software</h3>
+            <p>
+              Soluções sob medida para otimizar seus processos e aumentar sua
+              produtividade.
+            </p>
+          </div>
+          <div class="service-card">
+            <h3>Segurança da Informação</h3>
+            <p>
+              Proteção de dados e implementação de políticas de segurança
+              robustas.
+            </p>
+          </div>
+          <div class="service-card">
+            <h3>Cloud Computing</h3>
+            <p>Migração e gerenciamento de infraestrutura em nuvem.</p>
+          </div>
+        </div>
+      </section>
 
-        <section id="founders">
-            <h2>Fundadores</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Cargo</th>
-                        <th>Nome</th>
-                        <th>Breve CV</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>CEO</td>
-                        <td>Nome Fundador 1</td>
-                        <td>Breve CV do Fundador 1...</td>
-                    </tr>
-                    <tr>
-                        <td>CTO</td>
-                        <td>Nome Fundador 2</td>
-                        <td>Breve CV do Fundador 2...</td>
-                    </tr>
-                     <tr>
-                        <td>COO</td>
-                        <td>Nome Fundador 3</td>
-                        <td>Breve CV do Fundador 3...</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
+      <section id="founders">
+        <h2>Nossos Fundadores</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Cargo</th>
+              <th>Nome</th>
+              <th>Breve CV</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>CEO</td>
+              <td>Carlos Silva</td>
+              <td>
+                Mestre em Ciência da Computação pela UFPE, com mais de 15 anos
+                de experiência em gestão de TI e inovação tecnológica.
+              </td>
+            </tr>
+            <tr>
+              <td>CTO</td>
+              <td>Ana Oliveira</td>
+              <td>
+                Doutora em Engenharia de Software pela USP, especialista em
+                arquitetura de sistemas e desenvolvimento ágil.
+              </td>
+            </tr>
+            <tr>
+              <td>COO</td>
+              <td>Pedro Santos</td>
+              <td>
+                MBA em Gestão de Projetos pela FGV, com vasta experiência em
+                operações e gestão de equipes de TI.
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
 
     <footer class="main-footer">
+      <div class="container">
         <div id="contact">
-            <h3>Contato</h3>
-            <ul>
-                <li>Telefone Fixo: (XX) XXXX-XXXX</li>
-                <li>WhatsApp: (XX) XXXXX-XXXX</li>
-                <li><a href="mailto:contato@empresa.com">contato@empresa.com</a></li>
-            </ul>
+          <h3>Contato</h3>
+          <ul>
+            <li>Telefone Fixo: (81) 3333-4444</li>
+            <li>WhatsApp: (81) 99999-8888</li>
+            <li>
+              <a href="mailto:contato@techsolutions.com.br"
+                >contato@techsolutions.com.br</a
+              >
+            </li>
+          </ul>
         </div>
         <div id="address">
-            <h3>Endereço</h3>
-            <p>Rua Exemplo, 123, Bairro, Cidade - Estado, CEP XXXXX-XXX</p>
+          <h3>Endereço</h3>
+          <p>
+            Av. Cais do Apolo, 222, 16º andar, Bairro do Recife, Recife - PE,
+            CEP 50030-220
+          </p>
         </div>
-         <div id="payment-methods">
-            <h3>Formas de Pagamento</h3>
-            <img src="placeholder_payment1.png" alt="Pagamento 1" class="payment-icon">
-            <img src="placeholder_payment2.png" alt="Pagamento 2" class="payment-icon">
+        <div id="payment-methods">
+          <h3>Formas de Pagamento</h3>
+          <img
+            src="placeholder_payment1.png"
+            alt="Cartão de Crédito"
+            class="payment-icon"
+          />
+          <img
+            src="placeholder_payment2.png"
+            alt="Boleto Bancário"
+            class="payment-icon"
+          />
+          <img src="placeholder_payment3.png" alt="PIX" class="payment-icon" />
         </div>
+      </div>
     </footer>
 
     <script src="js/index.js"></script>
-</body>
+  </body>
 </html>
