--- a/public/service_request.html
+++ b/public/service_request.html
@@ -3,37 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solicitar Serviço - Empresa TI</title>
+    <title>Solicitar Serviço - TechSolutions</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <img src="placeholder_logo.png" alt="Logo da Empresa" id="logo-small" />
-      <h1>Solicitação de Serviços de TI</h1>
+    <header class="main-header">
+      <div class="container">
+        <img
+          src="placeholder_logo.png"
+          alt="Logo TechSolutions"
+          id="logo-small"
+        />
+        <h1>Solicitação de Serviços</h1>
+      </div>
     </header>
-    <main>
+    <main class="container">
       <section id="user-info">
         <h2>Dados do Usuário</h2>
-        <p>Nome: <span id="user-name">Nome Fixo do Usuário</span></p>
-        <p>Login: <span id="user-email">email.fixo@usuario.com</span></p>
+        <div class="user-details">
+          <p><strong>Nome:</strong> <span id="user-name">João Silva</span></p>
+          <p>
+            <strong>E-mail:</strong>
+            <span id="user-email">joao.silva@exemplo.com</span>
+          </p>
+        </div>
       </section>
 
       <section id="past-requests">
         <h2>Minhas Solicitações</h2>
-        <table id="requests-table">
-          <thead>
-            <tr>
-              <th>Data Pedido</th>
-              <th>Nº Solicitação</th>
-              <th>Serviço</th>
-              <th>Status</th>
-              <th>Preço (R$)</th>
-              <th>Data Prevista</th>
-              <th>Ação</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
+        <div class="table-container">
+          <table id="requests-table">
+            <thead>
+              <tr>
+                <th>Data Pedido</th>
+                <th>Nº Solicitação</th>
+                <th>Serviço</th>
+                <th>Status</th>
+                <th>Preço (R$)</th>
+                <th>Data Prevista</th>
+                <th>Ação</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>15/03/2024</td>
+                <td>2024-001</td>
+                <td>Consultoria Rede</td>
+                <td>Em Andamento</td>
+                <td>500,00</td>
+                <td>20/03/2024</td>
+                <td><button class="delete-btn">Excluir</button></td>
+              </tr>
+              <tr>
+                <td>01/03/2024</td>
+                <td>2024-002</td>
+                <td>Manutenção Servidor</td>
+                <td>Concluído</td>
+                <td>800,00</td>
+                <td>11/03/2024</td>
+                <td><button class="delete-btn">Excluir</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </section>
 
       <section id="new-request">
@@ -42,48 +74,57 @@
           <div class="form-group">
             <label for="service-type">Serviço de TI:</label>
             <select id="service-type" name="service-type">
-              <option value="">Selecione...</option>
+              <option value="">Selecione um serviço...</option>
               <option value="consultoria" data-price="500" data-deadline="5">
-                Consultoria Rede
+                Consultoria em Redes
               </option>
               <option value="manutencao" data-price="800" data-deadline="10">
-                Manutenção Servidor
+                Manutenção de Servidores
               </option>
               <option
                 value="desenvolvimento"
                 data-price="1500"
                 data-deadline="20"
               >
-                Desenvolvimento Software
+                Desenvolvimento de Software
+              </option>
+              <option value="seguranca" data-price="1200" data-deadline="15">
+                Segurança da Informação
+              </option>
+              <option value="cloud" data-price="1000" data-deadline="12">
+                Migração para Cloud
               </option>
             </select>
           </div>
-          <div class="form-group">
-            <p>Preço: R$ <span id="service-price">--</span></p>
-          </div>
-          <div class="form-group">
-            <p>
-              Prazo de Atendimento: <span id="service-deadline">--</span> dias
-            </p>
-          </div>
-          <div class="form-group">
-            <p>
-              Data Prevista de Atendimento:
-              <span id="service-predicted-date">--</span>
-            </p>
-          </div>
-          <div class="form-group">
-            <p>Status: <span id="service-status">EM ELABORAÇÃO</span></p>
+          <div class="service-details">
+            <div class="form-group">
+              <label>Preço:</label>
+              <p>R$ <span id="service-price">--</span></p>
+            </div>
+            <div class="form-group">
+              <label>Prazo de Atendimento:</label>
+              <p><span id="service-deadline">--</span> dias úteis</p>
+            </div>
+            <div class="form-group">
+              <label>Data Prevista:</label>
+              <p><span id="service-predicted-date">--</span></p>
+            </div>
+            <div class="form-group">
+              <label>Status:</label>
+              <p><span id="service-status">EM ELABORAÇÃO</span></p>
+            </div>
           </div>
           <div id="error-message" class="error"></div>
           <div class="form-actions">
-            <button type="submit">Incluir Solicitação</button>
+            <button type="submit">Solicitar Serviço</button>
           </div>
         </form>
       </section>
     </main>
     <footer class="main-footer">
-      <p>&copy; 2025 Empresa TI. Todos os direitos reservados.</p>
+      <div class="container">
+        <p>&copy; 2024 TechSolutions. Todos os direitos reservados.</p>
+      </div>
     </footer>
     <script src="js/common.js"></script>
     <script src="js/service_request.js"></script>
