--- a/public/change_password.html
+++ b/public/change_password.html
@@ -98,7 +98,7 @@
         <div id="address">
           <h3>Endereço</h3>
           <p>
-            Av. Cais do Apolo, 222, 16º andar, Bairro do Recife, Recife - PE,
+            Av. Cais do Apolo, 77, Sala 17, Bairro do Recife, Recife - PE,
             CEP 50030-220
           </p>
         </div>
