--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <img src="placeholder_logo.png" alt="Logo TechSolutions" id="logo" />
+        <img src="/images/logo.png" alt="Logo TechSolutions" id="logo" />
         <h1>Transformando Negócios com Tecnologia</h1>
         <nav>
           <a href="login.html" id="login-link">Login Cliente</a>
@@ -57,19 +57,19 @@
         <h2>Nossa Estrutura e Equipe</h2>
         <div class="photo-gallery">
           <figure>
-            <img src="placeholder_foto1.jpg" alt="Nossa Sede" />
+            <img src="images/headquarters.jpg" alt="Nossa Sede" />
             <figcaption>Sede Principal - Recife/PE</figcaption>
           </figure>
           <figure>
-            <img src="placeholder_foto2.jpg" alt="Sala de Reuniões" />
+            <img src="images/meeting.webp" alt="Sala de Reuniões" />
             <figcaption>Sala de Reuniões Moderna</figcaption>
           </figure>
           <figure>
-            <img src="placeholder_foto3.jpg" alt="Data Center" />
+            <img src="images/data_center.jpeg" alt="Data Center" />
             <figcaption>Data Center Seguro</figcaption>
           </figure>
           <figure>
-            <img src="placeholder_foto4.jpg" alt="Equipe" />
+            <img src="images/team.jpg" alt="Equipe" />
             <figcaption>Nossa Equipe de Especialistas</figcaption>
           </figure>
         </div>
@@ -119,26 +119,17 @@
           <tbody>
             <tr>
               <td>CEO</td>
-              <td>Carlos Silva</td>
+              <td>Fernando Loureiro</td>
               <td>
-                Mestre em Ciência da Computação pela UFPE, com mais de 15 anos
-                de experiência em gestão de TI e inovação tecnológica.
+                Bacharel em Ciência da Computação, Data Scientist Jr e CTO da Skamboo.
               </td>
             </tr>
             <tr>
               <td>CTO</td>
-              <td>Ana Oliveira</td>
+              <td>André Sousa</td>
               <td>
-                Doutora em Engenharia de Software pela USP, especialista em
-                arquitetura de sistemas e desenvolvimento ágil.
-              </td>
-            </tr>
-            <tr>
-              <td>COO</td>
-              <td>Pedro Santos</td>
-              <td>
-                MBA em Gestão de Projetos pela FGV, com vasta experiência em
-                operações e gestão de equipes de TI.
+                Bacharel em Ciência da Computação, Desenvolvedor Frontend Junior e
+                especialista em Firebase.
               </td>
             </tr>
           </tbody>
