Refactor footer structure and update payment methods display

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <img src="/images/logo.png" alt="Logo TechSolutions" id="logo" />
+        <a href="index.html">
+          <img src="/images/logo.png" alt="Logo TechSolutions" id="logo" />
+        </a>
         <h1>Transformando Negócios com Tecnologia</h1>
         <nav>
           <a href="login.html" id="login-link">Login Cliente</a>
@@ -121,15 +123,16 @@
               <td>CEO</td>
               <td>Fernando Loureiro</td>
               <td>
-                Bacharel em Ciência da Computação, Data Scientist Jr e CTO da Skamboo.
+                Bacharel em Ciência da Computação, Data Scientist Jr e CTO da
+                Skamboo.
               </td>
             </tr>
             <tr>
               <td>CTO</td>
               <td>André Sousa</td>
               <td>
-                Bacharel em Ciência da Computação, Desenvolvedor Frontend Junior e
-                especialista em Firebase.
+                Bacharel em Ciência da Computação, Desenvolvedor Frontend Junior
+                e especialista em Firebase.
               </td>
             </tr>
           </tbody>
@@ -154,23 +157,34 @@
         <div id="address">
           <h3>Endereço</h3>
           <p>
-            Av. Cais do Apolo, 222, 16º andar, Bairro do Recife, Recife - PE,
-            CEP 50030-220
+            Av. Cais do Apolo, 77, Sala 17, Bairro do Recife, Recife - PE, CEP
+            50030-220
           </p>
         </div>
-        <div id="payment-methods">
+        <div id="address">
           <h3>Formas de Pagamento</h3>
-          <img
-            src="placeholder_payment1.png"
-            alt="Cartão de Crédito"
-            class="payment-icon"
-          />
-          <img
-            src="placeholder_payment2.png"
-            alt="Boleto Bancário"
-            class="payment-icon"
-          />
-          <img src="placeholder_payment3.png" alt="PIX" class="payment-icon" />
+          <div id="payment-methods">
+            <div class="payment-method">
+              <img
+                src="/images/credit.png"
+                alt="Cartão de Crédito"
+                class="payment-icon"
+              />
+              <p>Cartão de Crédito</p>
+            </div>
+            <div class="payment-method">
+              <img
+                src="/images/invoice.png"
+                alt="Boleto Bancário"
+                class="payment-icon"
+              />
+              <p>Boleto Bancário</p>
+            </div>
+            <div class="payment-method">
+              <img src="/images/pix.png" alt="PIX" class="payment-icon" />
+              <p>PIX</p>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
