Update error message handling and improve footer structure across multiple HTML files

--- a/public/change_password.html
+++ b/public/change_password.html
@@ -73,7 +73,7 @@
             <li>Caracteres NÃO permitidos: { } [ ] &lt; &gt; ;</li>
           </ul>
         </div>
-        <div id="error-message" class="error"></div>
+        <div id="error-message" class="error-message"></div>
         <div class="form-actions">
           <button type="submit">Alterar Senha</button>
           <button type="button" id="clear-button">Limpar</button>
@@ -81,8 +81,7 @@
       </form>
     </main>
 
-    <footer class="main-footer">
-    </footer>
+    <footer class="main-footer"></footer>
 
     <script src="js/common.js"></script>
     <script src="js/change_password.js"></script>
