--- a/public/register.html
+++ b/public/register.html
@@ -155,7 +155,7 @@
             <option value="pos_graduado">Pós-graduado</option>
           </select>
         </div>
-        <div id="error-message" class="error"></div>
+        <div id="error-message" class="error-message"></div>
         <div class="form-actions">
           <button type="submit">Cadastrar</button>
           <button type="button" id="clear-button">Limpar</button>
@@ -164,8 +164,7 @@
       </form>
     </main>
 
-    <footer class="main-footer">
-    </footer>
+    <footer class="main-footer"></footer>
 
     <script src="js/common.js"></script>
     <script src="js/register.js"></script>
