--- a/public/login.html
+++ b/public/login.html
@@ -47,7 +47,7 @@
             placeholder="Digite sua senha"
           />
         </div>
-        <div id="error-message" class="error"></div>
+        <div id="error-message" class="error-message"></div>
         <div class="form-actions">
           <button type="submit">Entrar</button>
           <button type="button" id="clear-button">Limpar</button>
@@ -59,8 +59,7 @@
       </form>
     </main>
 
-    <footer class="main-footer">
-    </footer>
+    <footer class="main-footer"></footer>
 
     <script src="js/common.js"></script>
     <script src="js/login.js"></script>
