--- a/public/service_request.html
+++ b/public/service_request.html
@@ -122,7 +122,7 @@
               <p><span id="service-status">EM ELABORAÇÃO</span></p>
             </div>
           </div>
-          <div id="error-message" class="error"></div>
+          <div id="error-message" class="error-message"></div>
           <div class="form-actions">
             <button type="submit">Solicitar Serviço</button>
           </div>
