Remove redundant header elements

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
         </a>
         <h1>Transformando Negócios com Tecnologia</h1>
         <nav>
-          <a href="login.html" id="login-link">Login Cliente</a>
-          <a href="register.html" id="register-link">Cadastrar Cliente</a>
+          <a href="login.html" id="login-link">Login</a>
+          <a href="register.html" id="register-link">Cadastrar</a>
           <a href="service_request.html" id="service-link" style="display: none"
             >Solicitar Serviço</a
           >
