--- a/public/login.html
+++ b/public/login.html
@@ -7,22 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
-        <img src="placeholder_logo.png" alt="Logo TechSolutions" id="logo" />
-        <h1>Área do Cliente</h1>
-        <nav>
-          <a href="login.html" id="login-link">Login Cliente</a>
-          <a href="register.html" id="register-link">Cadastrar Cliente</a>
-          <a href="service_request.html" id="service-link" style="display: none"
-            >Solicitar Serviço</a
-          >
-          <button id="logout-btn" class="logout-btn" style="display: none">
-            Sair
-          </button>
-        </nav>
-      </div>
-    </header>
+    <header class="main-header"></header>
 
     <main class="container">
       <form id="login-form">
