--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechSolutions - Soluções em TI</title>
+    <title>Nandeco - Soluções em TI</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <a href="index.html">
-          <img src="/images/logo.png" alt="Logo TechSolutions" id="logo" />
+          <img src="/images/logo.png" alt="Logo Nandeco" id="logo" />
         </a>
         <h1>Transformando Negócios com Tecnologia</h1>
         <nav>
@@ -30,7 +30,7 @@
       <section id="history">
         <h2>Nossa História</h2>
         <p>
-          Fundada em 2010, a TechSolutions nasceu da visão de três profissionais
+          Fundada em 2010, a Nandeco nasceu da visão de três profissionais
           apaixonados por tecnologia e inovação. Começamos como uma pequena
           startup focada em consultoria de TI e, ao longo dos anos, expandimos
           nossos serviços para atender às crescentes demandas do mercado
@@ -148,9 +148,7 @@
             <li>Telefone Fixo: (81) 3333-4444</li>
             <li>WhatsApp: (81) 99999-8888</li>
             <li>
-              <a href="mailto:contato@techsolutions.com.br"
-                >contato@techsolutions.com.br</a
-              >
+              <a href="mailto:contato@nandeco.com.br">contato@nandeco.com.br</a>
             </li>
           </ul>
         </div>
