--- a/public/change_password.html
+++ b/public/change_password.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trocar Senha - TechSolutions</title>
+    <title>Trocar Senha - Nandeco</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="main-header">
-    </header>
+    <header class="main-header"></header>
 
     <main class="container">
       <form id="change-password-form">
